# brush-targeting

./: .dockerignore  .gitignore  Dockerfile  README.md  layout.ipynb  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml
backend/: config.py  dependencies.py  main.py
backend/graphql/: README.md  resolvers.py  schema.py  types.py  utils.py
backend/macro_planning/: depot_placement.py  interactive_map.py  junctions.py  micro_routes.py  trip_routing.py  visualize_micros.py
backend/media/: locations.json  pipelines.json
backend/models/: locations.py  pipeline.py  processing.py  project.py
backend/persistence/: file_manager.py
backend/processing/: pipeline.py
backend/routes/: download.py  files.py  image_search.py  jobs.py  locations.py  panel.py  pipeline.py  targets.py  tiles.py  upload.py  waypoints.py
backend/services/: cogeo.py  tiling_service.py
backend/tasks/: processing_tasks.py
backend/tests/: test_api.py
brush_targeting/: main.py
brush_targeting/macro_planning/: image_tiling.py  junctions.py  visualize_routing.py
brush_targeting/panel_app/: depot_placement.py  pipeline.py  search_stage.py  search_techniques.py  stage_audit.py  stage_routing.py  stage_select.py  targets_stage.py  tesselation.py  upload_stage.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue  (+3 more)
macro_planning/: depot_placement.py  micro_routes.py
panel_app/: pipeline.py  search_techniques.py  stage_audit.py  utils.py
plant_search/: pathfinding.py  region_partition.py  verify_targets.py
tests/: test_configs.py
(+94 files in other folders)
